--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "ownerNumber": ["6285878313791@s.whatsapp.net"],
-  "botName": "ItsukiBot - MD",
-  "sessionName": "kizakixd",
+  "ownerNumber": ["8106448209@s.whatsapp.net"],
+  "botName": "Rangz BOTz",
+  "sessionName": "Rangz MD",
   "pathImg": "./media/thumb.jpg"
 }
